mesh-peerauthentication.yml
apiVersion: "security.istio.io/v1beta1"
kind: "PeerAuthentication"
metadata:
    name: "mesh-mtls"
spec:
    mtls:
        mode: STRICT
