censusapp-destinationrule.yml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: spring-census
  namespace: census
spec:
  host: spring-census
  subsets:
  - name: v1
    labels:
      version: v1
