censusapp-authorizationpolicy.yml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: authorization-policy
  namespace: census
spec:
  selector:
    matchLabels:
      app: spring-census
  action: ALLOW
  rules:
  - from:
    - source:
        requestPrincipals: ["https://dev-n8xq5t40atbepes2.us.auth0.com/*"]
    to:
    - operation:
        methods: ["GET"]
        paths: ["/data/census/*", "/actuator/health"]
    - operation:
        methods: ["POST"]
        paths: ["/data/census/add"]
